add coverage
add configuration test
fix some code smell