@@ -22,7 +22,6 @@ import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import org.apache.commons.lang.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpHeaders;
@@ -118,7 +117,7 @@ public class JwtAuthorizationFilter extends OncePerRequestFilter {
         Arrays.stream(
                 claims.get(SecurityConstants.AUTHORITIES_KEY).toString().split(ApiConstant.COMMA))
             .map(SimpleGrantedAuthority::new)
-            .collect(Collectors.toList());
+            .toList();
     return new UsernamePasswordAuthenticationToken(userDetails, StringUtils.EMPTY, authorities);
   }
 
